<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirFlo</string>
    <string name="about">About this App</string>
    <string name="about_close_button">Close</string>
    <string name="about_goog_button">Show license</string>
    <string name="title_flight_detail_activity">Flight Detail</string>
    <string name="title_flight_detail_prefs">Select Flight Detail Items</string>
    <string name="title_list_preference_activity">Flight List Preferences</string>
    <string name="title_type_preference_activity">Adjust Textsize</string>
    <string name="title_file_preferece_activity">Load Flightbook: /</string>
    <string name="type_pref_cat1_title">Textsize of Main Flightlist</string>
    <string name="type_pref_cat2_title">Textsize of Flight Details</string>
    <string name="type_pref_head_hint">Select the textsize of the first line</string>
    <string name="type_pref_head_title">Main Header</string>
    <string name="type_pref_body_hint">Select the textsize of the second line</string>
    <string name="type_pref_body_title">Main Body</string>
    <string name="type_pref_detail_hint">Select the textsize of flightdetails</string>
    <string name="type_pref_detail_title">Flightdetails</string>
    <string name="list_pref_cat1_title">Items in first Line</string>
    <string name="list_pref_cat2_title">Items in second Line</string>
    <string name="list_pref_hint_selector">"Select Item no. "</string>
    <string name="list_pref_empty_field">None</string>
    <string name="file_pref_message_nozip">Only .zip Files allowed!</string>
    <string name="list_pref_sort_ascending">Ascending</string>
    <string name="list_pref_sort_decending">Decending</string>
    <string name="list_pref_sort_sequence">Sort Sequence</string>
    <string name="list_pref_sort_criterium">Sort Criteria</string>
    <string name="list_pref_cat_sort_title">Sorting Preferences</string>
    <string name="main_menu_prefdetail">Flight Detail Preferences</string>
    <string name="main_menu_preflist">Flight List Preferences</string>
    <string name="main_menu_loadbook">Load FlightBook</string>
    <string name="main_menu_typesize">Adjust Textsize</string>
    <string name="detail_pref_empty">--Hide empty fields in flight details--</string>
    <string name="total">Quantity</string>
    <string name="number">Flightnumber</string>
    <string name="pilot">Pilot</string>
    <string name="date">Flight Date</string>
    <string name="country">Country</string>
    <string name="site">Site</string>
    <string name="site2">Launch Site</string>
    <string name="landingsite">Landing Site</string>
    <string name="starttime">Launch Time</string>
    <string name="UTCorr">UTC Launch Time</string>
    <string name="duration">Flighttime</string>
    <string name="landingtime">Landing Time</string>
    <string name="startheight">Start Height</string>
    <string name="maxheight">Maximum Height</string>
    <string name="landheight">Landing Height</string>
    <string name="heightgain">Height Gain</string>
    <string name="starttype">Start Type</string>
    <string name="avgspeed">OLC Speed</string>
    <string name="maxvario">Maximum Climb</string>
    <string name="minvario">Maximum Sink</string>
    <string name="glidertyp">Glider Type</string>
    <string name="gliderID">Glider ID</string>
    <string name="GPSID">GPS Device</string>
    <string name="compID">Competition ID</string>
    <string name="compClass">Competition Class</string>
    <string name="comment">Comment</string>
    <string name="olc">OLC</string>
    <string name="tag">Tag</string>
    <string name="olcfree">Free Flight</string>
    <string name="olctri">Free Triangle</string>
    <string name="olcfia">FAI Triangle</string>
    <string name="xspinner_prompt">Items Axis</string>
    <string name="start_mountain">Mountain</string>
    <string name="start_winch">Winch</string>
    <string name="start_ultralight">Ultralight</string>
    <string name="start_other">Other</string>
    <string name="start_powered">Powered</string>
    <string name="start_estart">E-Start</string>
    <string name="start_ground">Groundhandling</string>
    <string name="alltogether">Total</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="authors_note">        Contact: pulce@gmx.at \n
        Copyright 2016 \n
        by Florian Hauser</string>
    <string name="legal_notice">    Credits go out to Lars Seifert for 
    support and for supplying the original AirTome tag icons.
    \n
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version. \n

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details. \n
    
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.</string>
        <string name="glide_cp" translatable="false">Image Gallery supported by bumptech/Glide.
            Copyright 2014 Google, Inc. All rights reserved.\n

    Redistribution and use in source and binary forms, with or without modification, are
    permitted provided that the following conditions are met:

       1. Redistributions of source code must retain the above copyright notice, this list of
             conditions and the following disclaimer.

       2. Redistributions in binary form must reproduce the above copyright notice, this list
             of conditions and the following disclaimer in the documentation and/or other materials
             provided with the distribution.

    THIS SOFTWARE IS PROVIDED BY GOOGLE, INC. AS IS AND ANY EXPRESS OR IMPLIED
    WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
    FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR
    CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
    CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
    SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
    ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
    NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
    ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

    The views and conclusions contained in the software and documentation are those of the
    authors and should not be interpreted as representing official policies, either expressed
    or implied, of Google, Inc.</string>

    <string name="mp_chart_notice" translatable="false">Stats realized with <![CDATA[<a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a>]]></string>
    <string name="mapquest_notice" translatable="false">Data, imagery and map information provided by <![CDATA[<a href="http://www.thunderforest.com/">Thunderforest</a>]]>, MapQuest, <![CDATA[<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>]]> and contributors, <![CDATA[<a href="http://opendatacommons.org/licenses/odbl/">ODbL</a>]]></string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_open_map">Open Map</string>
    <string name="no_igc_file">No igc file for this flight</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="check_for_updates_failed">Check for updates failed</string>
    <string name="already_latest_version">You are using the latest version</string>
    <string name="new_version_available">is available, you use</string>
    <string name="about_airflo_version">"AirFlo Version "</string>
    <string name="about_google_api_legal" translatable="false">Maps are also provided by Google Maps API.</string>
    <string name="title_activity_image" translatable="false">ImageActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_open_gallery">Open gallery</string>
    <string name="list_pref_cat_indicator">Gallery and Track Indicator</string>
    <string name="list_pref_show_indicator">Show Indicator</string>
    <string name="picpref_picsize_hint">Set maximum resolution for zoom</string>
    <string name="picpref_picsize_title">Maximum Resolution</string>
    <string name="picpref_cache_hint">Only relevant for online images</string>
    <string name="picpref_cache_title">Cache Strategy</string>
    <string name="main_menu_prefpic">Image Gallery Preferences</string>
    <string name="title_pic_pref">Settings Image Gallery</string>
    <string name="picClearCacheTitle">Clear Cache</string>
    <string name="picClearCacheSummary">Clear memory and disk cache</string>
    <string name="clearCacheIdentifierString" translatable="false">list_pic_clear_cache</string>
    <string name="toastCacheCleared">Cache cleared</string>
    <string name="main_menu_chart">Open Stats</string>
    <string name="title_chartfragment">Statistics</string>
    <string name="permission_info">No permission for access to external storage - this permission is needed for the app to load the flightbook.</string>
</resources>