<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_load"
        android:title="@string/main_menu_loadbook"></item>
    <item
        android:id="@+id/action_typesize"
        android:title="@string/main_menu_typesize"></item>
    <item
        android:id="@+id/action_preflist"
        android:title="@string/main_menu_preflist"></item>
    <item
        android:id="@+id/action_prefdetail"
        android:title="@string/main_menu_prefdetail"></item>
    <item
        android:id="@+id/action_prefpic"
        android:title="@string/main_menu_prefpic"></item>
    <item
        android:id="@+id/action_about"
        android:title="@string/about"></item>
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        android:title="@string/check_for_updates" />

</menu>