<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/type_pref_cat1_title" >
        <ListPreference
            android:entries="@array/typeSize"
            android:entryValues="@array/typeSize"
            android:key="list_head_size"
            android:summary="@string/type_pref_head_hint"
            android:title="@string/type_pref_head_title" />
        <ListPreference
            android:entries="@array/typeSize"
            android:entryValues="@array/typeSize"
            android:key="list_type_size"
            android:summary="@string/type_pref_body_hint"
            android:title="@string/type_pref_body_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/type_pref_cat2_title" >
        <ListPreference
            android:entries="@array/typeSize"
            android:entryValues="@array/typeSize"
            android:key="detailtextsize"
            android:summary="@string/type_pref_detail_hint"
            android:title="@string/type_pref_detail_title" />
    </PreferenceCategory>

</PreferenceScreen>